2013-01-10  Anthony Green  <green@moxielogic.com>

	* m4/ax_compiler_vendor.m4: New file.
	* configure.ac: Test for compiler vendor and don't use
	AX_CFLAGS_WARN_ALL with the sun compiler.
	* aclocal.m4, configure: Rebuilt.

2013-01-10  Anthony Green  <green@moxielogic.com>

	* include/ffi_common.h: Don't use GCCisms to define types when
	building with the SUNPRO compiler.

2013-01-10  Anthony Green  <green@moxielogic.com>

	* configure.ac: Put local.exp in the right place.
	* configure: Rebuilt.

	* src/x86/ffi.c: Update comment about regparm function attributes.
	* src/x86/sysv.S (ffi_closure_SYSV): The SUNPRO compiler requires
	that all function arguments be passed on the stack (no regparm
	support).

2013-01-08  Anthony Green  <green@moxielogic.com>

	* configure.ac: Generate local.exp.  This sets CC_FOR_TARGET
	when we are using the vendor compiler.
	* testsuite/Makefile.am (EXTRA_DEJAGNU_SITE_CONFIG): Point to
	../local.exp.
	* configure, testsuite/Makefile.in: Rebuilt.

	* testsuite/libffi.call/call.exp: Run tests with different
	options, depending on whether or not we are using gcc or the
	vendor compiler.
	* testsuite/lib/libffi.exp (libffi-init): Set using_gcc based on
	whether or not we are building/testing with gcc.

2013-01-08  Anthony Green  <green@moxielogic.com>

	* configure.ac: Switch x86 solaris target to X86 by default.
	* configure: Rebuilt.

2013-01-08  Anthony Green  <green@moxielogic.com>

	* configure.ac: Fix test for read-only eh_frame.
	* configure: Rebuilt.

2013-01-08  Anthony Green  <green@moxielogic.com>

	* src/x86/sysv.S, src/x86/unix64.S: Only emit DWARF unwind info
	when building with the GNU toolchain.
	* testsuite/libffi.call/ffitest.h (CHECK): Fix for Solaris vendor
	compiler.

2013-01-07  Thorsten Glaser <tg@mirbsd.org>

	* testsuite/libffi.call/cls_uchar_va.c,
	testsuite/libffi.call/cls_ushort_va.c,
	testsuite/libffi.call/va_1.c: Testsuite fixes.

2013-01-07  Thorsten Glaser <tg@mirbsd.org>
